manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-trek-project-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ttproject
  template:
    metadata:
      labels:
        app: ttproject
    spec:
      containers:
      - name: ttproject
        image: culceanluca/ttproject:1
        command: ["/bin/sh", "-c", "python3 ./main.py; while true; do sleep 3600; done"]
        ports:
        - containerPort: 8080
