manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-trek-app-service
spec:
  selector:
    app: tech-trek-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
